--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ table#tabelaspec caption span {
                 <h1>Website Sample</h1>
                 <h3>This is a model for a simple website</h3>
             </hgroup>
-            <img src="Images/baixo_web.webp" id="baixo">
+            <img src="/Projeto/Images/baixo_web.webp" id="baixo">
         <nav id="menu">
             <h1>Menu</h1>
             <ul>
