--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My WebSite</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
-@font-face{
+    @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
+    @font-face{
     font-family: 'FonteLogo';
     src: url("Font/TheStudentsTeacher-Regular.ttf");
 }
@@ -335,9 +335,9 @@ table#tabelaspec caption span {
         <nav id="menu">
             <h1>Menu</h1>
             <ul>
-                <li><a href="Arquivos_HTML/meu teste1.html" target="_blank">Teste Button</a></li>
-                <li><a href="Arquivos_HTML/meu teste2.html" target="_blank">Soma de Letras</a></li>
-                <li><a href="/Arquivos_HTML/Explicacoes_principal.html" target="_blank">iFrame Sample</a></li>
+                <li><a href="./Projeto/Arquivos_HTML/meu teste1.html" target="_blank">Teste Button</a></li>
+                <li><a href="./Projeto/Arquivos_HTML/meu teste2.html" target="_blank">Soma de Letras</a></li>
+                <li><a href="./Projeto//Arquivos_HTML/Explicacoes_principal.html" target="_blank">iFrame Sample</a></li>
             <!--<ul>
                     <li>tipo1</li>
                     <li>tipo2</li>
@@ -353,7 +353,7 @@ table#tabelaspec caption span {
         <h2>Título h2</h2>
         <h1>Título h1 com fonte personalizada</h1>
         <figure class="foto_legenda">
-            <img id="img01" src="Images/glass.png">
+            <img id="img01" src="./Projeto/Images/glass.png">
             <figcaption>
                 <h1>Glass of Wine</h1>
                 <p>Copo de vinho</p>
@@ -396,15 +396,15 @@ table#tabelaspec caption span {
         </section>
         <section id="section3-imagens">
         <figure class="img">
-            <img src="/Images/Eu.webp" class="img_size">
+            <img src="./Projeto/Images/Eu.webp" class="img_size">
             <h1>Clique aqui</h1>
         </figure>
         <figure class="img">
-            <img src="/Images/caixa_web.webp" class="img_size">
+            <img src="./Projeto/Images/caixa_web.webp" class="img_size">
             <h1>Clique aqui</h1>
         </figure>
         <figure class="img">
-            <img src="/Images/glass.webp" class="img_size">
+            <img src="./Projeto/Images/glass.webp" class="img_size">
             <h1>Clique aqui</h1>
         </figure>
         </section>
