--- a/Projeto/Arquivos_HTML/Explicacoes.html
+++ b/Projeto/Arquivos_HTML/Explicacoes.html
@@ -47,7 +47,7 @@
     <h1>Titulo 1</h1>
     <h2>SubTitulo 1</h2>
 </header>
-<img src="/Images/Taine.webp" class="img-dir" alt="essa a Taine">
+<img src="./Projeto/Images/Taine.webp" class="img-dir" alt="essa a Taine">
 <p>texto1texto textotexto1texto textotexto1texto textotexto1texto textotexto1texto textotexto1texto textotexto1texto textotexto1texto textotexto1texto textotexto1texto textotexto1texto textotexto1texto textotexto1texto textotexto1texto textotexto1texto textotexto1texto textotexto1texto texto
 </p>
 </article>
@@ -57,7 +57,7 @@
     <h1>Titulo 2</h1>
     <h2>SubTitulo 2</h2>
 </header>
-<img src="/Images/Eu.webp" class="img-dir" alt="esse sou eu">
+<img src="./Projeto/Images/Eu.webp" class="img-dir" alt="esse sou eu">
 <p>TextoTextoTextoTextoTexto rr rr r r r r rr  r r r r  r rTextoTextoTextoTextoTexto rr rr r r r r rr  r r r r  r rTextoTextoTextoTextoTexto rr rr r r r r rr  r r r r  r rTextoTextoTextoTextoTexto rr rr r r r r rr  r r r r  r rTextoTextoTextoTextoTexto rr rr r r r r rr  r r r r  r rTextoTextoTextoTextoTexto rr rr r r r r rr  r r r r  r rTextoTextoTextoTextoTexto rr rr r r r r rr  r r r r  r rTextoTextoTextoTextoTexto rr rr r r r r rr  r r r r  r r
 </p>
 </article>
