--- a/Projeto/Arquivos_HTML/Explicacoes_principal.html
+++ b/Projeto/Arquivos_HTML/Explicacoes_principal.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Glass</title>
-    <link rel="stylesheet" href="/Arquivos_HTML/estilo_explicacoes.css">
-    <link rel="stylesheet" href="/estilo.css">
+    <link rel="stylesheet" href="./Projeto/Arquivos_HTML/estilo_explicacoes.css">
+    <link rel="stylesheet" href="./Projeto/estilo.css">
 </head>
 <body>
     <div id="interface">
@@ -18,7 +18,7 @@
             <nav id="menu">
                 <h1>Menu</h1>
                 <ul>
-                    <li><a href="/aula5.html">Teste Button</a></li>
+                    <li><a href="./Projeto/aula5.html">Teste Button</a></li>
                 </ul>
             </nav>
            
@@ -31,12 +31,12 @@
                 <p>Esta e a pagina Explicacoes_principal</p>               
             </hgroup>
             <section id="conteudo">
-                <img src="/Images/glass.webp" usemap="#meumapa">
+                <img src="./Projeto/Images/glass.webp" usemap="#meumapa">
                 <map name="meumapa">
                     <area shape="rect" coords="64,163,96,274" href="Explicacoes.html#titulo2" target="janela"/>
                     
                 </map>
-                <iframe src="Explicacoes.html" name="janela" id="frame-spec"></iframe>
+                <iframe src="./Projeto/Arquivos_HTML/Explicacoes.html" name="janela" id="frame-spec"></iframe>
             </section>
 
         </article>
