--- a/Projeto/aula5.html
+++ b/Projeto/aula5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My WebSite</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="./Projeto/estilo.css">
 </head>
 
 <body>
@@ -15,13 +15,13 @@
                 <h1>Website Sample</h1>
                 <h3>This is a model for a simple website</h3>
             </hgroup>
-            <img src="Images/baixo_web.webp" id="baixo">
+            <img src="./Projeto/Images/baixo_web.webp" id="baixo">
         <nav id="menu">
             <h1>Menu</h1>
             <ul>
-                <li><a href="Arquivos_HTML/meu teste1.html" target="_blank">Teste Button</a></li>
-                <li><a href="Arquivos_HTML/meu teste2.html" target="_blank">Soma de Letras</a></li>
-                <li><a href="/Arquivos_HTML/Explicacoes_principal.html" target="_blank">iFrame Sample</a></li>
+                <li><a href="./Projeto/Arquivos_HTML/meu teste1.html" target="_blank">Teste Button</a></li>
+                <li><a href="./Projeto/Arquivos_HTML/meu teste2.html" target="_blank">Soma de Letras</a></li>
+                <li><a href="./Projeto/Arquivos_HTML/Explicacoes_principal.html" target="_blank">iFrame Sample</a></li>
             <!--<ul>
                     <li>tipo1</li>
                     <li>tipo2</li>
@@ -37,7 +37,7 @@
         <h2>Título h2</h2>
         <h1>Título h1 com fonte personalizada</h1>
         <figure class="foto_legenda">
-            <img id="img01" src="Images/glass.png">
+            <img id="img01" src="./Projeto/Images/glass.png">
             <figcaption>
                 <h1>Glass of Wine</h1>
                 <p>Copo de vinho</p>
@@ -80,15 +80,15 @@
         </section>
         <section id="section3-imagens">
         <figure class="img">
-            <img src="/Images/Eu.webp" class="img_size">
+            <img src="./Projeto//Images/Eu.webp" class="img_size">
             <h1>Clique aqui</h1>
         </figure>
         <figure class="img">
-            <img src="/Images/caixa_web.webp" class="img_size">
+            <img src="./Projeto//Images/caixa_web.webp" class="img_size">
             <h1>Clique aqui</h1>
         </figure>
         <figure class="img">
-            <img src="/Images/glass.webp" class="img_size">
+            <img src="./Projeto//Images/glass.webp" class="img_size">
             <h1>Clique aqui</h1>
         </figure>
         </section>
